src/Lexer.java
/* Lexer.java */
/* Generated By:JavaCC: Do not edit this line. Lexer.java */
    import java.util.List;
    import java.util.ArrayList;
    import java.io.FileNotFoundException;
        public class Lexer implements LexerConstants {
            public static void main(String[] args)throws ParseException{
                try{
                Lexer lexer = new Lexer(System.in);
                lexer.program();
                //SimpleNode root = lexer.program();
                //root.dump("");
                }catch(Exception e){
                    System.out.println(e.getMessage());
                }
            }

  final public void program() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      classDeclaration();
    }
    jj_consume_token(0);
  }

  final public void classDeclaration() throws ParseException {
    jj_consume_token(CLASS);
    id();
    jj_consume_token(LBR);
    declaration();
    jj_consume_token(RBR);
  }

  final public void id() throws ParseException {Token t;
    jj_consume_token(ID);
  }

  final public void declaration() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONST:
      case CONSTR:
      case FUNC:
      case VARID:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONST:
      case VARID:{
        varDeclaration();
        break;
        }
      case FUNC:{
        funDeclaration();
        break;
        }
      case CONSTR:{
        constructor();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void varDeclaration() throws ParseException {
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CONST:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      constant();
    }
    varDeclarationList();
    jj_consume_token(SC);
  }

  final public void constant() throws ParseException {
    jj_consume_token(CONST);
  }

  final public void varDeclarationList() throws ParseException {
    jj_consume_token(VARID);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQ:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(EQ);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TRUE:
      case FALSE:
      case INT:
      case VARID:
      case STRLIT:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
        break;
        }
      case TRUE:{
        jj_consume_token(TRUE);
        break;
        }
      case FALSE:{
        jj_consume_token(FALSE);
        break;
        }
      case VARID:{
        jj_consume_token(VARID);
        break;
        }
      case STRLIT:{
        jj_consume_token(STRLIT);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void funDeclaration() throws ParseException {
    jj_consume_token(FUNC);
    jj_consume_token(ID);
    jj_consume_token(LCB);
    params();
    jj_consume_token(RCB);
    jj_consume_token(LBR);
    statement();
    jj_consume_token(RBR);
  }

  final public void constructor() throws ParseException {
    jj_consume_token(CONSTR);
    jj_consume_token(LCB);
    params();
    jj_consume_token(RCB);
    jj_consume_token(LBR);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case THIS:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      constrStmt();
    }
    jj_consume_token(RBR);
  }

  final public void constrStmt() throws ParseException {
    jj_consume_token(THIS);
    jj_consume_token(ARROW);
    jj_consume_token(VARID);
    jj_consume_token(EQ);
    jj_consume_token(VARID);
    jj_consume_token(SC);
  }

  final public void params() throws ParseException {
    jj_consume_token(VARID);
  }

  final public void statement() throws ParseException {
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case RETURN:
      case READ:
      case WRITE:
      case IF:
      case WHILE:
      case ID:
      case VARID:
      case LCB:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_7;
      }
      if (jj_2_1(2)) {
        expressionStmt();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case RETURN:{
          returnStmt();
          break;
          }
        case WHILE:{
          iterationStmt();
          break;
          }
        case IF:{
          ifStmt();
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  final public void expressionStmt() throws ParseException {
    expression();
    jj_consume_token(SC);
  }

  final public void returnStmt() throws ParseException {
    jj_consume_token(RETURN);
    jj_consume_token(ID);
    jj_consume_token(SC);
  }

  final public void iterationStmt() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(LCB);
    expression();
    jj_consume_token(RCB);
    statement();
  }

  final public void ifStmt() throws ParseException {
    if (jj_2_2(3)) {
      jj_consume_token(IF);
      jj_consume_token(LCB);
      expression();
      jj_consume_token(RCB);
      jj_consume_token(THEN);
      statement();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:{
        jj_consume_token(IF);
        jj_consume_token(LCB);
        expression();
        jj_consume_token(RCB);
        jj_consume_token(THEN);
        statement();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ELSE:{
          jj_consume_token(ELSE);
          jj_consume_token(THEN);
          statement();
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          ;
        }
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VARID:{
      varDeclarationList();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      if (jj_2_3(3)) {
        mutable();
        binaryop();
        expression();
      } else if (jj_2_4(3)) {
        mutable();
        sumop();
        term();
      } else if (jj_2_5(3)) {
        mutable();
        mulop();
        term();
      } else if (jj_2_6(3)) {
        mutable();
        eqAssign();
        expression();
      } else if (jj_2_7(3)) {
        incdec();
      } else if (jj_2_8(3)) {
        immutable();
      } else if (jj_2_9(3)) {
        io();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void mutable() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VARID:{
      jj_consume_token(VARID);
      break;
      }
    case LCB:{
      jj_consume_token(LCB);
      expression();
      jj_consume_token(RCB);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void binaryop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LOE:{
      jj_consume_token(LOE);
      break;
      }
    case LT:{
      jj_consume_token(LT);
      break;
      }
    case GT:{
      jj_consume_token(GT);
      break;
      }
    case GOE:{
      jj_consume_token(GOE);
      break;
      }
    case COMPARISON:{
      jj_consume_token(COMPARISON);
      break;
      }
    case NEQ:{
      jj_consume_token(NEQ);
      break;
      }
    case NOT:{
      jj_consume_token(NOT);
      break;
      }
    case OR:{
      jj_consume_token(OR);
      break;
      }
    case AND:{
      jj_consume_token(AND);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void sumop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ADD:{
      jj_consume_token(ADD);
      break;
      }
    case SUB:{
      jj_consume_token(SUB);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void mulop() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MUL:{
      jj_consume_token(MUL);
      break;
      }
    case DIV:{
      jj_consume_token(DIV);
      break;
      }
    case MOD:{
      jj_consume_token(MOD);
      break;
      }
    case POW:{
      jj_consume_token(POW);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void term() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case VARID:{
      jj_consume_token(VARID);
      break;
      }
    case INT:{
      jj_consume_token(INT);
      break;
      }
    case STRLIT:{
      jj_consume_token(STRLIT);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void eqAssign() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ADDASSIGN:{
      jj_consume_token(ADDASSIGN);
      expression();
      break;
      }
    case SUBASSIGN:{
      jj_consume_token(SUBASSIGN);
      expression();
      break;
      }
    case MULASSIGN:{
      jj_consume_token(MULASSIGN);
      expression();
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void incdec() throws ParseException {
    if (jj_2_10(3)) {
      mutable();
      jj_consume_token(INC);
    } else if (jj_2_11(3)) {
      mutable();
      jj_consume_token(DEC);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void immutable() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ID:{
      call();
      break;
      }
    case VARID:{
      jj_consume_token(VARID);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void io() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case READ:{
      read();
      break;
      }
    case WRITE:{
      write();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void read() throws ParseException {
    jj_consume_token(READ);
    jj_consume_token(LCB);
    jj_consume_token(RCB);
  }

  final public void write() throws ParseException {
    jj_consume_token(WRITE);
    jj_consume_token(LCB);
    params();
    jj_consume_token(RCB);
  }

  final public void call() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(LCB);
    arguments();
    jj_consume_token(RCB);
  }

  final public void arguments() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case READ:
    case WRITE:
    case ID:
    case VARID:
    case LCB:{
      expression();
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[21] = jj_gen;
          break label_8;
        }
        jj_consume_token(COMMA);
        expression();
      }
    }
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_3_7()
 {
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3_6()
 {
    if (jj_3R_11()) return true;
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_5()
 {
    if (jj_3R_11()) return true;
    if (jj_3R_15()) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_4()
 {
    if (jj_3R_11()) return true;
    if (jj_3R_13()) return true;
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_3()
 {
    if (jj_3R_11()) return true;
    if (jj_3R_12()) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_10()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_20()) {
    jj_scanpos = xsp;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) {
    jj_scanpos = xsp;
    if (jj_3_6()) {
    jj_scanpos = xsp;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) {
    jj_scanpos = xsp;
    if (jj_3_9()) return true;
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_20()
 {
    if (jj_3R_28()) return true;
    return false;
  }

  private boolean jj_3_2()
 {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(LCB)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_36()
 {
    if (jj_scan_token(COMMA)) return true;
    return false;
  }

  private boolean jj_3R_35()
 {
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_36()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_9()
 {
    if (jj_3R_10()) return true;
    if (jj_scan_token(SC)) return true;
    return false;
  }

  private boolean jj_3_11()
 {
    if (jj_3R_11()) return true;
    if (jj_scan_token(DEC)) return true;
    return false;
  }

  private boolean jj_3_1()
 {
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_34()
 {
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_33()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(15)) {
    jj_scanpos = xsp;
    if (jj_scan_token(2)) {
    jj_scanpos = xsp;
    if (jj_scan_token(3)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_scan_token(46)) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_32()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_34()) {
    jj_scanpos = xsp;
    if (jj_3R_35()) return true;
    }
    return false;
  }

  private boolean jj_3R_29()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LCB)) return true;
    if (jj_3R_32()) return true;
    return false;
  }

  private boolean jj_3R_27()
 {
    if (jj_3R_31()) return true;
    return false;
  }

  private boolean jj_3R_31()
 {
    if (jj_scan_token(WRITE)) return true;
    if (jj_scan_token(LCB)) return true;
    if (jj_scan_token(17)) return true;
    return false;
  }

  private boolean jj_3R_30()
 {
    if (jj_scan_token(READ)) return true;
    if (jj_scan_token(LCB)) return true;
    if (jj_scan_token(RCB)) return true;
    return false;
  }

  private boolean jj_3R_19()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) return true;
    }
    return false;
  }

  private boolean jj_3R_26()
 {
    if (jj_3R_30()) return true;
    return false;
  }

  private boolean jj_3R_28()
 {
    if (jj_scan_token(VARID)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_scan_token(34)) { jj_scanpos = xsp; break; }
    }
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_33()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_18()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_25()) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) return true;
    }
    return false;
  }

  private boolean jj_3R_25()
 {
    if (jj_3R_29()) return true;
    return false;
  }

  private boolean jj_3_10()
 {
    if (jj_3R_11()) return true;
    if (jj_scan_token(INC)) return true;
    return false;
  }

  private boolean jj_3R_17()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) return true;
    }
    return false;
  }

  private boolean jj_3R_24()
 {
    if (jj_scan_token(MULASSIGN)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_23()
 {
    if (jj_scan_token(SUBASSIGN)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_16()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_22()) {
    jj_scanpos = xsp;
    if (jj_3R_23()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_22()
 {
    if (jj_scan_token(ADDASSIGN)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3R_14()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_scan_token(15)) {
    jj_scanpos = xsp;
    if (jj_scan_token(46)) return true;
    }
    }
    return false;
  }

  private boolean jj_3R_15()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(26)) {
    jj_scanpos = xsp;
    if (jj_scan_token(28)) {
    jj_scanpos = xsp;
    if (jj_scan_token(29)) {
    jj_scanpos = xsp;
    if (jj_scan_token(27)) return true;
    }
    }
    }
    return false;
  }

  private boolean jj_3R_13()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(19)) {
    jj_scanpos = xsp;
    if (jj_scan_token(24)) return true;
    }
    return false;
  }

  private boolean jj_3R_21()
 {
    if (jj_scan_token(LCB)) return true;
    if (jj_3R_10()) return true;
    if (jj_scan_token(RCB)) return true;
    return false;
  }

  private boolean jj_3R_12()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(40)) {
    jj_scanpos = xsp;
    if (jj_scan_token(38)) {
    jj_scanpos = xsp;
    if (jj_scan_token(37)) {
    jj_scanpos = xsp;
    if (jj_scan_token(39)) {
    jj_scanpos = xsp;
    if (jj_scan_token(42)) {
    jj_scanpos = xsp;
    if (jj_scan_token(36)) {
    jj_scanpos = xsp;
    if (jj_scan_token(35)) {
    jj_scanpos = xsp;
    if (jj_scan_token(44)) {
    jj_scanpos = xsp;
    if (jj_scan_token(43)) return true;
    }
    }
    }
    }
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3R_11()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(17)) {
    jj_scanpos = xsp;
    if (jj_3R_21()) return true;
    }
    return false;
  }

  private boolean jj_3_9()
 {
    if (jj_3R_19()) return true;
    return false;
  }

  private boolean jj_3_8()
 {
    if (jj_3R_18()) return true;
    return false;
  }

  /** Generated Token Manager. */
  public LexerTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[23];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x400,0x20052,0x20052,0x2,0x0,0x2800c,0x2800c,0x20,0x40034b80,0x4880,0x2000,0x800,0x20000,0x40020000,0x0,0x1080000,0x3c000000,0x28000,0x700000,0x30000,0x300,0x40000,0x40030300,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x4,0x4000,0x4000,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x1df8,0x0,0x0,0x4000,0x0,0x0,0x0,0x0,0x0,};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[11];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public Lexer(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Lexer(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new LexerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public Lexer(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new LexerTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 23; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
